# more.content_security

./: .travis.yml  HISTORY.rst  README.rst  develop_requirements.txt  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yml
license/: LICENSE
more/content_security/: __init__.py  core.py  policy.py
more/content_security/tests/: test_app.py  test_policy.py
requirements/: corelibs.txt  develop.txt
