[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "more.content_security"
version = "0.2.0"
dynamic = ["readme"]
description = "Content Security Policy for Morepath"
license = "BSD-3-Clause"
license-files = ["license/LICENSE"]
authors = [{name = "Denis Krienbühl", email = "denis@href.ch"}]
maintainers = [{name = "Henri Hulski", email = "henri@sancode.it"}]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">= 3.10"
# TODO: pin to morepath >= 1
dependencies = ["morepath"]

[project.urls]
Repository = "https://github.com/morepath/more.content_security"
Issues = "https://github.com/morepath/more.content_security/issues"
Changelog = "https://github.com/morepath/more.content_security/blob/master/HISTORY.rst"

[project.optional-dependencies]
test = ["pytest >= 8", "pytest-env", "WebTest"]
coverage = ["pytest-cov"]
lint = ["black", "flake8", "flake8-pyproject"]
mypy = ["mypy", "pytest", "types-WebOb", "types-WebTest"]
pyright = ["pyright", "pytest", "types-WebOb", "types-WebTest", "WebTest"]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"more.content_security" = ["py.typed"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "HISTORY.rst"]}

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["more/content_security"]
addopts = ["-vv"]
env = ["RUN_ENV=test"]

[tool.coverage.run]
omit = ["more/content_security/tests/*"]
source = ["more/content_security"]

[tool.coverage.report]
show_missing = true

[tool.flake8]
show-source = true
ignore = ["E203", "E231", "E301", "E704", "W503"]
max-line-length = 88

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true

[tool.bumpversion]
current_version = "0.2.0"
commit = true
message = "Release {new_version}"
tag = true
tag_message = "Release {new_version}"
regex = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search= 'version = "{current_version}"'
replace= 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "HISTORY.rst"
search = """
---------(?:

unreleased
~~~~~~~~~~)?
"""
replace = """
---------(?:

(?:unreleased|[0-9]+\\.[0-9]+\\.[0-9]+(:?\\.[a-z]+[0-9]*)? \\(unreleased\\))
~+)
"""

[tool.tox]
requires = ["tox>=4"]
env_list = [
    "py310",
    "py311",
    "py312",
    "py313",
    "py314",
    "pypy3",
    "coverage",
    "pre-commit",
    "mypy",
    "pyright",
]
skip_missing_interpreters = true

[tool.tox.gh.python]
"3.10" = ["py310"]
"3.11" = ["py311", "mypy", "pyright"]
"3.12" = ["py312"]
"3.13" = ["py313"]
"3.14" = ["py314", "pre-commit", "coverage"]
"pypy-3.11" = ["pypy3"]

[tool.tox.env_run_base]
package = "editable"
extras = ["test"]
deps = ["-r{tox_root}/requirements/corelibs.txt"]
commands = [["pytest", "{posargs:more}"]]

[tool.tox.env.coverage]
base_python = ["python3"]
extras = ["test", "coverage"]
commands = [
    ["pytest", "--cov", "--cov-fail-under=99", "{posargs:more}"],
]

[tool.tox.env.pre-commit]
base_python = ["python3"]
package = "skip"
deps = ["pre-commit"]
commands = [
    ["pre-commit", "run", "--all-files"],
]

[tool.tox.env.mypy]
base_python = ["python3"]
extras = ["mypy"]
commands = [
    ["mypy", "-p", "more.content_security", "--python-version", "3.10"],
    ["mypy", "-p", "more.content_security", "--python-version", "3.11"],
    ["mypy", "-p", "more.content_security", "--python-version", "3.12"],
    ["mypy", "-p", "more.content_security", "--python-version", "3.13"],
    ["mypy", "-p", "more.content_security", "--python-version", "3.14"],
]

[tool.tox.env.pyright]
base_python = ["python3"]
extras = ["pyright"]
commands = [
    ["pyright", "more/content_security", "--pythonversion", "3.10"],
    ["pyright", "more/content_security", "--pythonversion", "3.11"],
    ["pyright", "more/content_security", "--pythonversion", "3.12"],
    ["pyright", "more/content_security", "--pythonversion", "3.13"],
    ["pyright", "more/content_security", "--pythonversion", "3.14"],
]
